# dayz-ce-tool

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
docs/: BALANCING.md  MODS.md  USAGE.md
examples/ExampleWeaponsMod/: types.xml
examples/sample.chernarusplus/: cfgeconomycore.xml  cfgeventgroups.xml  cfglimitsdefinition.xml  cfglimitsdefinitionuser.xml  cfgspawnabletypes.xml
examples/sample.chernarusplus/db/: events.xml  globals.xml  types.xml
src/dzce/: __init__.py  balance.py  cli.py  config.py  console.py  doctor.py  fixes.py  groups.py  menu.py  mission.py  models.py  mods.py  overview.py  recipes.py  validate.py  xmlio.py
src/dzce/files/: __init__.py  economycore_file.py  eventgroups_file.py  events_file.py  globals_file.py  limitsdef_file.py  limitsuser_file.py  spawnabletypes_file.py  types_file.py
